# Passive-Fault-Tolerant-Control-UUV

./: .gitignore  NOTICE  README.md
src/ftc_control/: CMakeLists.txt  package.xml
src/ftc_control/config/: backstepping.yaml  faults.yaml  faults_bluerov2.yaml  smc.yaml
src/ftc_control/include/ftc_control/allocation/: thruster_allocation.hpp
src/ftc_control/include/ftc_control/controllers/: backstepping.hpp  ftsmc_controller.hpp  i_ftsmc_controller.hpp
src/ftc_control/include/ftc_control/models/: auv_dynamics.hpp
src/ftc_control/include/ftc_control/utils/: frames.hpp  math_utils.hpp
src/ftc_control/launch/: control_stack.launch.py  ftc_control.launch.py
src/ftc_control/src/allocation/: thruster_allocation.cpp
src/ftc_control/src/controllers/: backstepping.cpp  ftsmc_controller.cpp  i_ftsmc_controller.cpp
src/ftc_control/src/models/: auv_dynamics.cpp
src/ftc_control/src/nodes/: controller_node.cpp  data_logger_node.cpp  state_estimator_node.cpp  thruster_allocator_node.cpp  trajectory_node.cpp
src/ftc_simulation/: CMakeLists.txt  package.xml
src/ftc_simulation/config/: simulation.yaml
src/ftc_simulation/data/: bluerov2.scn
src/ftc_simulation/launch/: full_simulation.launch.py  manual_test.launch.py
src/ftc_simulation/scenarios/: bluerov2.scn  experiment_world.scn
