<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ftc_simulation</name>
  <version>0.1.0</version>
  <description>Stonefish simulation scenarios for fault-tolerant control experiments</description>
  <maintainer email="abhinash@example.com">Abhinash</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>stonefish_ros2</exec_depend>
  <exec_depend>ftc_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
